MODSOURCE-964 - 003 is being deleted when overlaying a MARC authority record with Data Import (#724)
(cherry picked from commit ad935e06e2a275d1431b9e60d4fec69a1e34b8ce)